feat(course): Improved error handling for courses feature